[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://src/scripts/ui/wave_indicator.gd" id="1_wave"]

[sub_resource type="Animation" id="Animation_1"]
resource_name = "wave_start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("WaveLabel:modulate")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2"]
resource_name = "wave_complete"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("WaveLabel:modulate")
tracks/0/interp = 1
tracks/0/loop = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"wave_complete": SubResource("Animation_2"),
"wave_start": SubResource("Animation_1")
}

[node name="WaveIndicator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wave")

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -13.0
offset_right = 100.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Wave 1"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
text = "Next Wave in: 5.0"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
} 